--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_half"
-    android:orientation="vertical"
     tools:context=".ui.main.ui.changepassword.ChangePasswordActivity">
 
     <include
@@ -13,7 +12,9 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@id/btnSave"
+        android:layout_below="@id/tb">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,15 +38,34 @@
                 android:text="@string/old_password"
                 android:textSize="@dimen/_14sdp" />
 
-            <EditText
-                style="@style/MatchEditText"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/bg_edit_text"
-                android:hint="@string/old_password"
-                android:imeOptions="actionNext"
-                android:inputType="textPassword"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp" />
+                android:background="@drawable/bg_edit_text">
+
+                <EditText
+                    android:id="@+id/edtOldPass"
+                    style="@style/MatchEditText"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/old_password"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp" />
+
+                <CheckBox
+                    android:id="@+id/cbOldPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:button="@drawable/bg_password_show_hide" />
+
+            </RelativeLayout>
+
 
             <TextView
                 style="@style/WrapTextView"
@@ -53,15 +73,32 @@
                 android:text="@string/new_password"
                 android:textSize="@dimen/_14sdp" />
 
-            <EditText
-                style="@style/MatchEditText"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/bg_edit_text"
-                android:hint="@string/new_password"
-                android:imeOptions="actionNext"
-                android:inputType="textPassword"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp" />
+                android:background="@drawable/bg_edit_text">
+
+                <EditText
+                    android:id="@+id/edtNewPass"
+                    style="@style/MatchEditText"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/new_password"
+                    android:imeOptions="actionNext"
+                    android:inputType="textPassword"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp" />
+
+                <CheckBox
+                    android:id="@+id/cbNewPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:button="@drawable/bg_password_show_hide" />
+
+            </RelativeLayout>
 
             <TextView
                 style="@style/WrapTextView"
@@ -69,25 +106,49 @@
                 android:text="@string/confirm_new_password"
                 android:textSize="@dimen/_14sdp" />
 
-            <EditText
-                style="@style/MatchEditText"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/bg_edit_text"
-                android:hint="@string/confirm_new_password"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnSave"
-                style="@style/ButtonMatch"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_70sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:background="@drawable/bg_sky_blue_10dp"
-                android:contentDescription="@string/image"
-                android:text="Save" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/bg_edit_text">
+
+                <EditText
+                    android:id="@+id/edtConfirmNewPass"
+                    style="@style/MatchEditText"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/confirm_new_password"
+                    android:imeOptions="actionDone"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp" />
+
+                <CheckBox
+                    android:id="@+id/cbConfirmNewPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:button="@drawable/bg_password_show_hide" />
+
+            </RelativeLayout>
+
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnSave"
+        style="@style/ButtonMatch"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/_25sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_25sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:background="@drawable/bg_sky_blue_10dp"
+        android:contentDescription="@string/image"
+        android:text="@string/save" />
+
+</RelativeLayout>
