--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -165,7 +165,8 @@
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
                         android:paddingStart="@dimen/_10sdp"
-                        android:paddingEnd="@dimen/_10sdp" />
+                        android:paddingEnd="@dimen/_10sdp"
+                        android:textColorHint="@color/black" />
 
 
                 </LinearLayout>
