--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -10,6 +10,7 @@
     tools:context=".ui.fragments.WeightFragment">
 
     <RelativeLayout
+        android:layout_marginTop="@dimen/_5sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -84,7 +85,10 @@
             android:id="@+id/btnAddWeight"
             style="@style/ButtonMatch"
             android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_80sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
             android:background="@drawable/bg_sky_blue_10dp"
             android:text="@string/add_weight" />
     </RelativeLayout>
