--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -35,8 +35,7 @@
             <TextView
                 style="@style/WrapTextView"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="@string/old_password"
-                android:textSize="@dimen/_14sdp" />
+                android:text="@string/old_password" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -47,6 +46,8 @@
                 <EditText
                     android:id="@+id/edtOldPass"
                     style="@style/MatchEditText"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@+id/cbOldPassword"
                     android:background="@drawable/bg_edit_text"
                     android:hint="@string/old_password"
                     android:imeOptions="actionNext"
@@ -70,8 +71,7 @@
             <TextView
                 style="@style/WrapTextView"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="@string/new_password"
-                android:textSize="@dimen/_14sdp" />
+                android:text="@string/new_password"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -82,6 +82,8 @@
                 <EditText
                     android:id="@+id/edtNewPass"
                     style="@style/MatchEditText"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@+id/cbNewPassword"
                     android:background="@drawable/bg_edit_text"
                     android:hint="@string/new_password"
                     android:imeOptions="actionNext"
@@ -103,8 +105,7 @@
             <TextView
                 style="@style/WrapTextView"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:text="@string/confirm_new_password"
-                android:textSize="@dimen/_14sdp" />
+                android:text="@string/confirm_new_password"/>
 
 
             <RelativeLayout
@@ -116,6 +117,8 @@
                 <EditText
                     android:id="@+id/edtConfirmNewPass"
                     style="@style/MatchEditText"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@+id/cbConfirmNewPassword"
                     android:background="@drawable/bg_edit_text"
                     android:hint="@string/confirm_new_password"
                     android:imeOptions="actionDone"
