--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -54,6 +54,7 @@
                 style="@style/MatchEditText"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_edit_text"
+                android:fontFamily="@font/opensans_semibold"
                 android:hint="@string/name"
                 android:imeOptions="actionDone"
                 android:inputType="textEmailAddress"
@@ -161,8 +162,9 @@
                         style="@style/MatchEditText"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:background="@drawable/bg_edit_text"
+                        android:fontFamily="@font/opensans_semibold"
                         android:hint="@string/breed"
-                        android:imeOptions="actionDone"
+                        android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
                         android:paddingStart="@dimen/_10sdp"
                         android:paddingEnd="@dimen/_10sdp"
@@ -177,6 +179,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_edit_text"
+                android:fontFamily="@font/opensans_semibold"
                 android:gravity="start|top"
                 android:hint="@string/about_pet"
                 android:imeOptions="actionDone"
