--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,7 +44,7 @@
     </style>
 
     <style name="TextRegularFont" parent="Widget.AppCompat.TextView">
-        <item name="fontFamily">@font/opensans_regular</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColor">@color/black</item>
     </style>
@@ -53,7 +53,7 @@
         <item name="android:layout_height">@dimen/_35sdp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textColor">@color/black</item>
-        <item name="fontFamily">@font/opensans_regular</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColorHint">@color/lightGrayA3A3A3</item>
     </style>
