--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -36,11 +36,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_centerVertical="true"
                     android:layout_toStartOf="@id/tvDate"
+                    android:fontFamily="@font/opensans_bold"
                     android:lines="1"
                     android:text="John Markus"
-                    android:textSize="@dimen/_10sdp" />
+                    android:textSize="@dimen/_11sdp" />
 
 
                 <TextView
@@ -49,6 +50,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/opensans_bold"
                     android:lines="1"
                     android:text="10:00 AM"
                     android:textColor="@color/black"
@@ -64,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_3sdp"
                 android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+                android:textColor="@color/grey"
                 android:textSize="@dimen/_9sdp" />
 
 
