--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">
 
-    <data>
-
-        <variable
-            name="forgotVM"
-            type="com.puppypedia.ui.auth.forgotpassword.ForgotPasswordVM" />
-
-    </data>
-
-
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">
+        android:fillViewport="true">
 
-        <androidx.core.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg"
                 android:orientation="vertical"
                 android:paddingStart="@dimen/_20sdp"
                 android:paddingEnd="@dimen/_20sdp">
@@ -60,25 +49,23 @@
                     android:text="@string/email"
                     android:textSize="@dimen/_14sdp" />
 
-                <EditText
-                    style="@style/MatchEditText"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:background="@drawable/bg_edit_text"
-                    android:hint="@string/enter_email"
-                    android:imeOptions="actionDone"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp"
-                    android:text="@{forgotVM.email}" />
+            <EditText
+                style="@style/MatchEditText"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="@string/enter_email"
+                android:imeOptions="actionDone"
+                android:inputType="textEmailAddress"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp" />
 
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/login"
+                    android:id="@+id/btnSubmit"
                     style="@style/ButtonMatch"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:background="@drawable/bg_sky_blue_10dp"
                     android:contentDescription="@string/image"
-                    android:onClick="@{(view)-> forgotVM.onClick(view,`btnSubmit`)}"
                     android:text="@string/submit" />
 
 
@@ -89,4 +76,3 @@
 
 
     </LinearLayout>
-</layout>
