--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,209 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    tools:context=".ui.auth.signup.SignUpActivity">
 
-        <variable
-            name="signUpVM"
-            type="com.puppypedia.ui.auth.signup.SignUpVM" />
-
-    </data>
-
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical"
-        tools:context=".ui.auth.signup.SignUpActivity">
+        android:fillViewport="true">
 
-        <androidx.core.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_20sdp"
+            android:paddingEnd="@dimen/_20sdp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/_20sdp"
-                android:paddingEnd="@dimen/_20sdp">
+            <RelativeLayout
+                android:layout_width="@dimen/_160sdp"
+                android:layout_height="@dimen/_150sdp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_60sdp">
+
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/ivProfile"
+                    android:layout_width="@dimen/_150sdp"
+                    android:layout_height="@dimen/_150sdp"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/pet_pic" />
 
                 <ImageView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_100sdp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_80sdp"
+                    android:id="@+id/ivCamera"
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
                     android:contentDescription="@string/image"
-                    android:src="@drawable/logo" />
+                    android:src="@drawable/camera" />
+            </RelativeLayout>
 
-                <TextView
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:fontFamily="@font/courgette_regular"
+                android:text="@string/sign_u"
+                android:textColor="@color/theme_Color"
+                android:textSize="@dimen/_18sdp" />
+
+
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:text="@string/name"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/etName"
+                style="@style/MatchEditText"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="@string/enter_name"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp" />
+
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="@string/email"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/etEmail"
+                style="@style/MatchEditText"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="@string/enter_email"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp" />
+
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="@string/password"
+                android:textSize="@dimen/_14sdp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/bg_edit_text">
+
+                <EditText
+                    android:id="@+id/etPassword"
+                    style="@style/MatchEditText"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@+id/cbPassword"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/enter_password"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp" />
+
+                <CheckBox
+                    android:id="@+id/cbPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_15sdp"
-                    android:fontFamily="@font/courgette_regular"
-                    android:text="@string/sign_u"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:button="@drawable/bg_password_show_hide" />
+
+            </RelativeLayout>
+
+
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="@string/confirm_password"
+                android:textSize="@dimen/_14sdp" />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/bg_edit_text">
+
+                <EditText
+                    android:id="@+id/etConfirmPass"
+                    style="@style/MatchEditText"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@+id/cbConfirmPassPassword"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/enter_confirm_password"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp" />
+
+                <CheckBox
+                    android:id="@+id/cbConfirmPassPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:button="@drawable/bg_password_show_hide" />
+
+            </RelativeLayout>
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnSignUp"
+                style="@style/ButtonMatch"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:background="@drawable/bg_sky_blue_10dp"
+                android:contentDescription="@string/image"
+                android:text="Sign Up" />
+
+            <LinearLayout
+                android:id="@+id/llSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_40sdp"
+                android:layout_marginBottom="@dimen/_10sdp">
+
+                <TextView
+                    style="@style/WrapTextView"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/dp5"
+                    android:text="@string/already_have_an_account"
+                    android:textSize="@dimen/_10sdp" />
+
+                <TextView
+                    android:id="@+id/signUp"
+                    style="@style/WrapTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/dp5"
+                    android:layout_marginBottom="@dimen/dp5"
+                    android:text="@string/sign_i"
                     android:textColor="@color/theme_Color"
-                    android:textSize="@dimen/_18sdp" />
-
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:text="@string/name"
-                    android:textSize="@dimen/_14sdp" />
-
-                <EditText
-                    style="@style/MatchEditText"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:background="@drawable/bg_edit_text"
-                    android:hint="@string/enter_name"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp"
-                    android:text="@{signUpVM.name}" />
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="@string/email"
-                    android:textSize="@dimen/_14sdp" />
-
-                <EditText
-                    style="@style/MatchEditText"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:background="@drawable/bg_edit_text"
-                    android:hint="@string/enter_email"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp"
-                    android:text="@{signUpVM.email}" />
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="@string/password"
-                    android:textSize="@dimen/_14sdp" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_35sdp"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:background="@drawable/bg_edit_text">
-
-                    <EditText
-                        android:id="@+id/edtPassword"
-                        style="@style/MatchEditText"
-                        android:layout_alignParentStart="true"
-                        android:layout_toStartOf="@+id/cbPassword"
-                        android:background="@drawable/bg_edit_text"
-                        android:hint="@string/enter_password"
-                        android:imeOptions="actionNext"
-                        android:importantForAutofill="no"
-                        android:inputType="textPassword"
-                        android:paddingStart="@dimen/_10sdp"
-                        android:paddingEnd="@dimen/_10sdp"
-                        android:text="@{signUpVM.password}" />
-
-                    <CheckBox
-                        android:id="@+id/cbPassword"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        android:button="@drawable/bg_password_show_hide" />
-
-                </RelativeLayout>
-
-
-                <TextView
-                    style="@style/WrapTextView"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="@string/confirm_password"
-                    android:textSize="@dimen/_14sdp" />
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_35sdp"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:background="@drawable/bg_edit_text">
-
-                    <EditText
-                        android:id="@+id/edtConfirmPass"
-                        style="@style/MatchEditText"
-                        android:layout_alignParentStart="true"
-                        android:layout_toStartOf="@+id/cbConfirmPassPassword"
-                        android:background="@drawable/bg_edit_text"
-                        android:hint="@string/enter_confirm_password"
-                        android:imeOptions="actionDone"
-                        android:inputType="textPassword"
-                        android:paddingStart="@dimen/_10sdp"
-                        android:paddingEnd="@dimen/_10sdp"
-                        android:text="@{signUpVM.confirmPassword}" />
-
-                    <CheckBox
-                        android:id="@+id/cbConfirmPassPassword"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        android:button="@drawable/bg_password_show_hide" />
-
-                </RelativeLayout>
-
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/login"
-                    style="@style/ButtonMatch"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:background="@drawable/bg_sky_blue_10dp"
-                    android:contentDescription="@string/image"
-                    android:onClick="@{(view)-> signUpVM.onClick(view,`btnSignIn`)}"
-                    android:text="Sign Up" />
-
-                <LinearLayout
-                    android:id="@+id/llSignUp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_40sdp"
-                    android:layout_marginBottom="@dimen/_10sdp">
-
-                    <TextView
-                        style="@style/WrapTextView"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="@dimen/dp5"
-                        android:text="@string/already_have_an_account"
-                        android:textSize="@dimen/_10sdp" />
-
-                    <TextView
-                        style="@style/WrapTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="@dimen/dp5"
-                        android:layout_marginBottom="@dimen/dp5"
-                        android:onClick="@{(view)->signUpVM.onClick(view,`SignIn`)}"
-                        android:text="@string/sign_i"
-                        android:textColor="@color/theme_Color"
-                        android:textSize="@dimen/_10sdp" />
-
-                </LinearLayout>
-
+                    android:textSize="@dimen/_10sdp" />
 
             </LinearLayout>
 
 
-        </androidx.core.widget.NestedScrollView>
+        </LinearLayout>
 
 
-    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
-</layout>
+
+</LinearLayout>
+
