--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,6 +50,7 @@
             </RelativeLayout>
 
             <EditText
+                android:id="@+id/etName"
                 style="@style/MatchEditText"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_edit_text"
@@ -159,6 +159,7 @@
 
 
                     <EditText
+                        android:id="@+id/etbreed"
                         style="@style/MatchEditText"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:background="@drawable/bg_edit_text"
@@ -175,6 +176,7 @@
             </LinearLayout>
 
             <EditText
+                android:id="@+id/etAbout"
                 style="@style/MatchEditText"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
@@ -192,7 +194,7 @@
                 android:textColorHint="@color/black" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnPetDetail"
+                android:id="@+id/btSubmit"
                 style="@style/ButtonMatch"
                 android:layout_margin="@dimen/_20sdp"
                 android:background="@drawable/bg_sky_blue_10dp"
