--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="lightGrayA3A3A3">#A3A3A3</color>
     <color name="lightGrayDDDCDC">#DDDCDC</color>
     <color name="lightGrayE8E8E8">#e8e8e8</color>
+    <color name="red">#E53520</color>
+    <color name="green">#5DB954</color>
+    <color name="blue">#06238A</color>
 </resources>
