--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,6 +86,16 @@
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:textSize">@dimen/_15sdp</item>
         <item name="android:fontFamily">@font/opensans_regular</item>
-<!--        <item name="colorControlNormal">@color/theme_Color</item>-->
+        <!--        <item name="colorControlNormal">@color/theme_Color</item>-->
     </style>
+
+
+    <style name="AlertTextAppearanceTitle">
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="AlertTextAppearanceText">
+        <item name="android:textSize">10sp</item>
+    </style>
+
 </resources>
